[package]
name = "schism"
version = "0.1.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2018"

[dependencies]
sodiumoxide = "0.2"
nom = "4.2"
byteorder = "1"
trustchain = { git = "https://github.com/necrobious/trust-chain", rev = "27afa96"  }
cachet = { git = "https://github.com/necrobious/cachet", rev = "a8c1218"  }
keytree = { git = "https://github.com/necrobious/keytree" , rev = "80d235c" }
